DC-1160: WIP changes; updated test data and GCP tests; azure test not working correctly yet